[package]
name = "scan"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dashmap = "6.1.0"
env_logger = "0.11.8"
eyre = "0.6.12"
futures = "0.3.31"
hickory-resolver = "0.25.2"
mime = "0.3.17"
openssl = "0.10.73"
ratatui = "0.29.0"
reqwest = { version = "0.12.20", features = ["json", "gzip"] }
rustls = "0.23.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
url = "2.5.4"
webpki-roots = "1.0.0"
whois-rust = "1.6.0"
x509-parser = "0.17.0"
