[package]
name = "scan"
version = "0.5.1"
edition = "2024"
build = "build.rs"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dashmap = "6.1.0"
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
futures = "0.3.31"
hickory-resolver = "0.25.2"
log = "0.4.28"
mime = "0.3.17"
nix = { version = "0.30.1", features = ["user"] }
openssl = { version = "0.10.74", features = ["vendored"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json", "gzip", "rustls-tls"], default-features = false }
rustls = { version = "0.23.34", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1.17"
url = "2.5.7"
webpki-roots = "1.0.4"
whois-rust = "1.6.0"
x509-parser = "0.18.0"
